--- a/Reataurant_01/Reataurant_01.vcxproj.filters
+++ b/Reataurant_01/Reataurant_01.vcxproj.filters
@@ -49,4 +49,9 @@
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Dishes.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
