Write dishes in  binarry file method

--- a/Reataurant_01/Reataurant_01.vcxproj
+++ b/Reataurant_01/Reataurant_01.vcxproj
@@ -163,6 +163,9 @@
   <ItemGroup>
     <Text Include="Dishes.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Dishes.bin" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
