--- a/Reataurant_01/Reataurant_01.vcxproj.filters
+++ b/Reataurant_01/Reataurant_01.vcxproj.filters
@@ -49,4 +49,9 @@
       <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Dishes.bin">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
